--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,32 @@
     <ul>
       <li *ngFor="let todo of todos">
         {{ todo.id }}. {{ todo.title }} -
-        <button *ngIf="!todo.done">Concluir</button> |
-        <button *ngIf="todo.done">Refazer</button> |
+        <button *ngIf="!todo.done" (click)="markAsDone(todo)">Concluir</button>
+        |
+        <button *ngIf="todo.done" (click)="markAsUndone(todo)">Refazer</button>
+        |
         <button (click)="remove(todo)">Remover</button>
       </li>
     </ul>
+
+    <form [formGroup]="form">
+      <!--- Não entendi bem -->
+      <fieldset>
+        <label for="">Tarefa:</label>
+        <input
+          type="text"
+          name=""
+          id=""
+          placeholder="Qual a tarefa?"
+          maxlength="60"
+          formControlName="title"
+        />
+        <small
+          *ngIf="form.controls.title.invalid && !form.controls.title.pristine"
+          >Esse campo deve ter entre 3 e 60 caracteres!</small
+        >
+        <button [disabled]="form.invalid">Salvar</button>
+      </fieldset>
+    </form>
   </body>
 </html>
