--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-Do</title>
-  </head>
-  <body>
-    <h1>{{ title }}</h1>
-    <ul>
-      <li *ngFor="let todo of todos">
-        {{ todo.id }}. {{ todo.title }} -
-        <button *ngIf="!todo.done" (click)="markAsDone(todo)">Concluir</button>
-        |
-        <button *ngIf="todo.done" (click)="markAsUndone(todo)">Refazer</button>
-        |
-        <button (click)="remove(todo)">Remover</button>
-      </li>
-    </ul>
+<h1>{{ title }}</h1>
+<ul>
+  <p *ngIf="todos.length == 0"><small>Sem Tarefas hoje!</small></p>
+  <li *ngFor="let todo of todos">
+    {{ todo.title }} -
+    <button *ngIf="!todo.done" (click)="markAsDone(todo)">Concluir</button>
+    |
+    <button *ngIf="todo.done" (click)="markAsUndone(todo)">Refazer</button>
+    |
+    <button (click)="remove(todo)">Remover</button>
+  </li>
+</ul>
 
-    <form [formGroup]="form">
-      <!--- Não entendi bem -->
-      <fieldset>
-        <label for="">Tarefa:</label>
-        <input
-          type="text"
-          name=""
-          id=""
-          placeholder="Qual a tarefa?"
-          maxlength="60"
-          formControlName="title"
-        />
-        <small
-          *ngIf="form.controls.title.invalid && !form.controls.title.pristine"
-          >Esse campo deve ter entre 3 e 60 caracteres!</small
-        >
-        <button [disabled]="form.invalid" (click)="add()">Salvar</button>
-      </fieldset>
-    </form>
-  </body>
-</html>
+<form [formGroup]="form">
+  <!--- Não entendi bem -->
+  <fieldset>
+    <label for="">Tarefa:</label>
+    <input
+      type="text"
+      name=""
+      id=""
+      placeholder="Qual a tarefa?"
+      maxlength="60"
+      formControlName="title"
+    />
+    <small *ngIf="form.controls.title.invalid && !form.controls.title.pristine"
+      >Esse campo deve ter entre 3 e 60 caracteres!</small
+    >
+    <button [disabled]="form.invalid" (click)="add()">Salvar</button>
+  </fieldset>
+</form>
